--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # OSX
 #
+data.json
 .DS_Store
-
+App.old
 # Xcode
 #
 build/
@@ -33,6 +34,7 @@ local.properties
 .cxx/
 *.keystore
 !debug.keystore
+.env
 
 # node.js
 #
