--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-fontawesome": "^7.0.0",
     "react-native-image-picker": "^5.4.0",
+    "react-native-keyboard-aware-view": "^0.0.14",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.0",
     "react-native-vector-icons": "^9.2.0"
